# MidtermProject

./: .travis.yml  CMakeLists.txt  LICENSE.txt  PCL_Matlab_Result__ROI_Modified_ascii.pcd  PCL_Matlab_Result__ROI_Smoothing_ascii.pcd  pclIo_test.pcd  readme.md
Results/: cppcheck output  cpplint output
app/: CMakeLists.txt  main.cpp  obstacleIdentify.cpp  pclCloudViewer.cpp  pclFastTriangular.cpp  pclIo.cpp  pclMlsSmoothing.cpp  pclPassThrough.cpp  pclStatisticalOutlierRemoval.cpp  pclVoxel.cpp
docs/: Midterm
docs/html/: annotated.html  bug.html  classes.html  classobstacleIdentify-members.html  classobstacleIdentify.html  classpclCloudViewer-members.html  classpclCloudViewer.html  classpclFastTriangular-members.html  classpclFastTriangular.html  classpclIo-members.html  classpclIo.html  classpclMlsSmoothing-members.html  classpclMlsSmoothing.html  classpclPassThrough-members.html  classpclPassThrough.html  classpclStatistOutRev-members.html  classpclStatistOutRev.html  classpclVoxel-members.html  classpclVoxel.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  obstacleIdentifyTest_8cpp.html  obstacleIdentifyTest_8cpp__incl.map  obstacleIdentifyTest_8cpp__incl.md5  obstacleIdentify_8h.html  obstacleIdentify_8h__dep__incl.map  obstacleIdentify_8h__dep__incl.md5  obstacleIdentify_8h__incl.map  (+51 more)
docs/latex/: annotated.tex  bug.tex  classobstacleIdentify.tex  classpclCloudViewer.tex  classpclFastTriangular.tex  classpclIo.tex  classpclMlsSmoothing.tex  classpclPassThrough.tex  classpclStatistOutRev.tex  classpclVoxel.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  obstacleIdentifyTest_8cpp.tex  obstacleIdentifyTest_8cpp__incl.md5  obstacleIdentify_8h.tex  obstacleIdentify_8h__dep__incl.md5  obstacleIdentify_8h__incl.md5  pclCloudViewer_8h.tex  pclCloudViewer_8h__incl.md5  pclFastTriangularTest_8cpp.tex  pclFastTriangularTest_8cpp__incl.md5  pclFastTriangular_8h.tex  pclIoTest_8cpp.tex  (+21 more)
include/: mergeHanhsPoint.h  obstacleIdentify.h  pclCloudViewer.h  pclFastTriangular.h  pclIo.h  pclMlsSmoothing.h  pclPassThrough.h  pclStatisticalOutlierRemoval.h  pclVoxel.h
test/: CMakeLists.txt  main.cpp  obstacleIdentifyTest.cpp  pclCloudViewerTest.cpp  pclFastTriangularTest.cpp  pclIoTest.cpp  pclMlsSmoothingTest.cpp  pclPassThroughTest.cpp  pclStatisticalOutlierRemovalTest.cpp  pclVoxelTest.cpp
(+17 files in other folders)
